Mod3  Fix Client Nuget Bugs: 1) fix bug 88958 2) fix bug 88957

--- a/Allfiles/20487C/Mod03/LabFiles/begin/BlueYonder.Companion.Client/BlueYonder.Companion.Client/BlueYonder.Companion.Client.csproj
+++ b/Allfiles/20487C/Mod03/LabFiles/begin/BlueYonder.Companion.Client/BlueYonder.Companion.Client/BlueYonder.Companion.Client.csproj
@@ -1,21 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{39D906C0-7DCD-4AEC-8B91-683DAB191BA1}</ProjectGuid>
+    <ProjectGuid>{A280B9A3-44E2-4E9F-8E69-2F602BA8ECA6}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BlueYonder.Companion.Client</RootNamespace>
     <AssemblyName>BlueYonder.Companion.Client</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.16299.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>BlueYonder.Companion.Client_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -87,13 +88,9 @@
     <Prefer32Bit>true</Prefer32Bit>
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
-  <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="Connected Services\LocationService\ConnectedService.json" />
-    <None Include="project.json" />
-    <PRIResource Include="strings\es\Resources.resw" />
-    <PRIResource Include="strings\en\Resources.resw" />
-  </ItemGroup>
+  <PropertyGroup>
+    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -119,7 +116,6 @@
     <Compile Include="Common\SettingsFlyout.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="Common\ViewModel.cs" />
-    <Compile Include="Connected Services\LocationService\LocationService.cs" />
     <Compile Include="Controls\ReservationDetailsControl.cs" />
     <Compile Include="DataModel\File.cs" />
     <Compile Include="DataModel\Flight.cs" />
@@ -135,6 +131,7 @@
     <Compile Include="DataModel\WeatherForecast.cs" />
     <Compile Include="DataTransferObjects\DTOExtensions.cs" />
     <Compile Include="DataTransferObjects\FileDTO.cs" />
+    <Compile Include="DataTransferObjects\LocationDTO.cs" />
     <Compile Include="DataTransferObjects\RegisterNotificationsRequestDTO.cs" />
     <Compile Include="DataTransferObjects\TravelerDTO.cs" />
     <Compile Include="Helpers\BackgroundTaskHelper.cs" />
@@ -161,6 +158,9 @@
     <Compile Include="Helpers\TripCategory.cs" />
     <Compile Include="Helpers\UserAuth.cs" />
     <Compile Include="Helpers\WnsManager.cs" />
+    <Compile Include="MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MediaViewModel.cs" />
     <Compile Include="ViewModels\OptionsViewModel.cs" />
@@ -211,6 +211,8 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="BlueYonder.Companion.Client_TemporaryKey.pfx" />
+    <PRIResource Include="strings\es\Resources.resw" />
+    <PRIResource Include="strings\en\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\BlueYonderGraphics\badgelogo-sdk.scale-100.png" />
@@ -250,6 +252,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="Common\StandardStyles.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -307,26 +313,27 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="FrequentFlyerService">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Components\FrequentFlyerService.winmd</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.10\lib\winrt45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
+      <Version>6.0.8</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlueYonder.Companion.Shared\BlueYonder.Companion.Shared.csproj">
-      <Project>{6e1fb89d-093b-455a-a76a-6c70e27792a5}</Project>
+      <Project>{d85cb1da-bc3f-4d85-a2cb-f779890e4797}</Project>
       <Name>BlueYonder.Companion.Shared</Name>
     </ProjectReference>
     <ProjectReference Include="..\BlueYonder.Companion.Tasks\BlueYonder.Companion.Tasks.csproj">
-      <Project>{f3eceba1-f808-40a8-8f80-a28dc009167b}</Project>
+      <Project>{8a5c46e5-2639-4912-81f1-01dfac8d3b57}</Project>
       <Name>BlueYonder.Companion.Tasks</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
+    <Reference Include="FrequentFlyerService">
+      <HintPath>..\Components\FrequentFlyerService.winmd</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
